--- a/_sass/services.scss
+++ b/_sass/services.scss
@@ -1,7 +1,3 @@
-/*==============================
-  Layout
-==============================*/
-
 * {
     box-sizing: border-box;
 }
@@ -12,8 +8,9 @@ html, body {
     margin: 0;
     padding: 0;
     border: none;
-    font-size: 1rem;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 1rem;
+    font-weight: 500;
 }
 
 .flex-vertically {
@@ -30,207 +27,195 @@ html, body {
     justify-content: center;
 }
 
-.container {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    border: none;
+.services {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
-    &.services {
+    @media only screen and (min-width: 992px) {
+        flex-direction: row;
+    }
+
+    .service {
+        flex: 1;
+        width: 100%;
+        min-height: 100vh;
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
 
-        @media only screen and (min-width: 992px) {
-            flex-direction: row;
+        h2 {
+            height: 220px;
+            line-height: 220px;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+        }
+    }
+
+    #content-creation {
+        background-color: #00A6FB;
+
+        .paper {
+            width: 135px;
+            height: 180px;
+            border: 1px solid black;
+            background-color: white;
+            transform: rotate( -5deg );
         }
 
-       .service {
-            flex: 1;
-            width: inherit;
-            min-height: 100vh;
+        .paper__copy {
+            margin: 0.5rem;
+        }
 
-            &:nth-of-type(even) {
-                background-color: #D2FF96;
+        p {
+            opacity: 0;
+            font-size: .55rem;            
+
+            &:first-of-type {
+                will-change: transform;
+                transition: 0.2s transform ease-in-out;
+                animation: fade-in-out 2s 1s infinite;
             }
-            &:nth-of-type(odd) {
-                background-color: #00A6FB;
-            }
+
             &:last-of-type {
-                background-color: lightgoldenrodyellow;
-            }
-            h1 {
-                text-transform: capitalize;
-                font-family: Arial, Helvetica, sans-serif;
-                padding: 0;
-                color: black;
-            }
-            /*==============================
-            Content Creation
-            ==============================*/
-            .paper {
-                width: 135px;
-                height: 180px;
-                border: 1px solid black;
-                background-color: white;
-                transform: rotate( -5deg );
-            }
-
-            .paper__copy {
-                margin: 0.5rem;
-            }
-
-            p {
-                opacity: 0;
-                font-size: .425rem;
-                text-align: justify;
-
-                &:first-of-type {
-                    will-change: transform;
-                    transition: 0.2s transform ease-in-out;
-                    animation: fade-in-out 2s 1s infinite;
-                }
-
-                &:last-of-type {
-                    will-change: transform;
-                    transition: 0.2s transform ease-in-out;
-                    animation: fade-in 2s 2s infinite;
-                }
-            }
-
-            .pencil {
                 will-change: transform;
                 transition: 0.2s transform ease-in-out;
-                animation: tilt 2s infinite;
-
-                &__tip {
-                    border-right: 20px solid antiquewhite;
-                    border-top: 10px solid transparent;
-                    border-bottom: 10px solid transparent;
-                    &__lead {
-                        border-right: 8px solid black;
-                        border-top: 4px solid transparent;
-                        border-bottom: 4px solid transparent;
-                    }
-                }
-                
-                &__core {
-                    width: 4rem;
-                    height: 28px;
-                    border-left: 1px solid black;
-                    background-color: yellow;                    
-                }
-
-                &__top {
-                    width: 20px;
-                    height: 27px;
-                    border: 1px solid black;
-                    background-color: #EF476F;
-                    
-                }
+                animation: fade-in 2s 2s infinite;
             }
-            @keyframes fade-in {
-                0% {
-                    opacity: 0;
-                }
-                50% {
-                    opacity: 1;
-                }
-            }
+        }
 
-            @keyframes fade-in-out {
-                0% {
-                    opacity: 0;
-                }
-                100% {
-                    opacity: 1;
-                }
-            }
+        .pencil {
+            will-change: transform;
+            transition: 0.2s transform ease-in-out;
+            animation: tilt 2s infinite;
 
-            /*==============================
-            Design
-            ==============================*/
-            .square {
-                width: 9rem;
-                height: 9rem;
-                background: hotpink;
-                z-index: 0;
-                will-change: transform;
-                transition: 0.2s transform ease-in-out;
-                animation: spinner 4s infinite;
-            }
-
-            .circle {
-                width: 8rem;
-                height: 8rem;
-                border-radius: 4.5rem;
-                background: #FFD972;
-                will-change: transform;
-                transition: 0.2s transform ease-in-out;
-                animation: paint 5s infinite;
-                position: relative;
-                left: 3.875rem;
-                bottom: 7rem;
-                z-index: 1;
-            }
-
-            .triangle {
-                width: 0;
-                height: 0;
-                border-bottom: 7rem solid #8B80F9;
-                border-left: 4rem solid transparent;
-                border-right: 4rem solid transparent;
-                will-change: transform;
-                transition: 0.2s transform ease-in-out;
-                animation: spinner 2s infinite;
-                position: relative;
-                bottom: 12rem;
-                z-index: 2;
-            }
-            @keyframes tilt {
-                0% {
-                    transform: rotate(0deg);
-                }
-                50% {
-                    transform: rotate(-45deg);
-                }
-            }
-
-            @keyframes spinner {
-                to {
-                    transform: rotate(0deg);
-                }
-                from {
-                    transform: rotate(360deg);
-                }
-            }
-
-            @keyframes paint {
-                0% {
-                    background: #FFD972;
-                }
-                50% {
-                    background: #00B2CA;
+            &__tip {
+                border-right: 20px solid antiquewhite;
+                border-top: 10px solid transparent;
+                border-bottom: 10px solid transparent;
+                &-lead {
+                    border-right: 8px solid black;
+                    border-top: 4px solid transparent;
+                    border-bottom: 4px solid transparent;
                 }
             }
             
-
-            /*==============================
-            Tutoring and Development
-            ==============================*/
-
-            .blackboard {
-                color: white;
-                font-family: Courier New, Courier, monospace;
-                font-size: 0.75rem;
-                font-weight: 700;
+            &__core {
+                width: 4rem;
+                height: 28px;
+                border-left: 1px solid black;
+                background-color: yellow;                    
             }
 
-            .blackboard pre {
-                height: 40vh;
+            &__top {
+                width: 20px;
+                height: 27px;
+                border: 1px solid black;
+                background-color: #EF476F;
+                
             }
-        } 
+        }
+        @keyframes fade-in {
+            0% {
+                opacity: 0;
+            }
+            50% {
+                opacity: 1;
+            }
+        }
+
+        @keyframes fade-in-out {
+            0% {
+                opacity: 0;
+            }
+            100% {
+                opacity: 1;
+            }
+        }
+    }
+
+    #design {
+        background-color: #D2FF96;
+
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        #square {
+            width: 9rem;
+            height: 9rem;
+            background: hotpink;
+            z-index: 0;
+            will-change: transform;
+            transition: 0.2s transform ease-in-out;
+            animation: spinner 4s infinite;
+        }
+
+        #circle {
+            width: 8rem;
+            height: 8rem;
+            border-radius: 4.5rem;
+            background: #FFD972;
+            will-change: transform;
+            transition: 0.2s transform ease-in-out;
+            animation: paint 5s infinite;
+            position: relative;
+            left: 3.875rem;
+            bottom: 7rem;
+            z-index: 1;
+        }
+
+        #triangle {
+            width: 0;
+            height: 0;
+            border-bottom: 7rem solid #8B80F9;
+            border-left: 4rem solid transparent;
+            border-right: 4rem solid transparent;
+            will-change: transform;
+            transition: 0.2s transform ease-in-out;
+            animation: spinner 2s infinite;
+            position: relative;
+            bottom: 12rem;
+            z-index: 2;
+        }
+        @keyframes tilt {
+            0% {
+                transform: rotate(0deg);
+            }
+            50% {
+                transform: rotate(-45deg);
+            }
+        }
+
+        @keyframes spinner {
+            to {
+                transform: rotate(0deg);
+            }
+            from {
+                transform: rotate(360deg);
+            }
+        }
+
+        @keyframes paint {
+            0% {
+                background: #FFD972;
+            }
+            50% {
+                background: #00B2CA;
+            }
+        }
+    }
+
+    #tutoring-and-development {
+        background-color: lightgoldenrodyellow;
+
+        pre {
+            height: 40vh;
+        }
     }
 }
