--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,9 @@
 
     {% include footer.html %}
     
+    {% if jekyll.environment == 'production' and site.google_analytics %}
     {% include service-worker.html %}
+    {% endif %}
   </body>
 
 </html>
