Add linkedin url to site.profiles and update svg paths

--- a/_assets/styles/content.css
+++ b/_assets/styles/content.css
@@ -37,25 +37,25 @@ div.container {
     div.container:nth-of-type(even) a:hover, div.container:nth-of-type(even) a:focus {
       text-decoration: underline; }
   div.container.food-lover {
-    background-image: url("/images/food-lover.svg");
+    background-image: url("/dist/images/food-lover.svg");
     background-color: #25D197;
     /*background-size: cover;*/
     background-repeat: no-repeat;
     background-position: top right; }
   div.container.tech-enthusiast {
-    background-image: url("/images/tech-enthusiast.svg");
+    background-image: url("/dist/images/tech-enthusiast.svg");
     /*background-size: cover;*/
     background-color: #1985A1;
     background-repeat: no-repeat;
     background-position: top right; }
   div.container.container.web-developer {
-    background-image: url("/images/web-developer.svg");
+    background-image: url("/dist/images/web-developer.svg");
     background-color: #8D5A97;
     /*background-size: cover;*/
     background-repeat: no-repeat;
     background-position: top right; }
   div.container.social {
-    background-image: url("/images/web-developer.svg");
+    background-image: url("/dist/images/web-developer.svg");
     /*background-size: cover;*/
     background-repeat: no-repeat;
     background-position: top left; }
