--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -22,9 +22,8 @@
     width: 100%;
     margin: 0;
     padding: 0;
-    border: none;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.3);
-    background-color: var(--base-color-plus-5);
+    border: none;    
+    background-color: #1D6DD5;
     color: white;
     font-weight: 700;
     line-height: 3em;
@@ -60,8 +59,9 @@
         width: 100%;
         min-height: 56px;
         text-align: center;
-        background-color: var(--base-color-plus-5);
-        color:white;       
+        background-color: #1D6DD5;
+        color:white;
+        box-shadow: 3px 2px 1px rgba(0,0,0,0.3);
     }     
 }
 .header__nav {
