--- a/_assets/styles/header.css
+++ b/_assets/styles/header.css
@@ -1,7 +1,7 @@
 :root {
-  --base-color-plus-5: #1D6DD5;
-  --base-color-plus-10: #1161C9;
-  --base-color-plus-15: #0655BC; }
+  --base-color-plus-5: #3F51B5;
+  --base-color-plus-10: #3949AB;
+  --base-color-plus-15: #303F9F; }
 
 .flex-vertically {
   display: flex;
@@ -20,7 +20,7 @@
   margin: 0;
   padding: 0;
   border: none;
-  background-color: #1D6DD5;
+  background-color: #3F51B5;
   color: white;
   font-weight: 700;
   line-height: 3em;
@@ -28,7 +28,7 @@
   z-index: 3; }
   .header__link {
     padding: 0.5rem;
-    font-size: 1.125rem;
+    font-size: 1.25rem;
     will-change: transform;
     transition: 0.25s transform ease-in-out; }
     .header__link:link, .header__link:visited {
@@ -38,18 +38,17 @@
       transform: scale(1.125); }
     @media only screen and (min-width: 425px) {
       .header__link {
-        font-size: 1.25rem; } }
+        font-size: 1.375rem; } }
     @media only screen and (min-width: 768px) {
       .header__link {
-        font-size: 1.375rem; } }
+        font-size: 1.5rem; } }
   .header__nav {
     display: flex;
     width: 100%;
     min-height: 56px;
     text-align: center;
-    background-color: #1D6DD5;
-    color: white;
-    box-shadow: 3px 2px 1px rgba(0, 0, 0, 0.3); }
+    background-color: #3F51B5;
+    color: white; }
 
 .header__nav {
   position: sticky;
