--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#2a7ae2">
+  <meta name="theme-color" content="#3F51B5">
   <title>{{ site.title | escape }}</title>
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
   <meta property="og:locale" content="en_US">
@@ -43,7 +43,7 @@
 
   <!-- Tile icon for Win8 (144x144 + tile color) -->
   <meta name="msapplication-TileImage" content="{{ site.url }}/dist/images/touch/ms-touch-icon-144x144-precomposed.png">
-  <meta name="msapplication-TileColor" content="#2a7ae2">
+  <meta name="msapplication-TileColor" content="#3F51B5">
 
   <!-- Favicon and Web App Manifest -->
   <link rel="icon" href="{{ site.url }}/dist/images/favicon.ico">
