--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -1,7 +1,7 @@
 :root{
-    --base-color-plus-5: #1D6DD5;
-    --base-color-plus-10: #1161C9;
-    --base-color-plus-15: #0655BC;
+    --base-color-plus-5: #3F51B5;
+    --base-color-plus-10: #3949AB;
+    --base-color-plus-15: #303F9F;
 }
 
 .flex-vertically {
@@ -22,8 +22,8 @@
     width: 100%;
     margin: 0;
     padding: 0;
-    border: none;    
-    background-color: #1D6DD5;
+    border: none;
+    background-color: #3F51B5;
     color: white;
     font-weight: 700;
     line-height: 3em;
@@ -32,7 +32,7 @@
     
     &__link {
         padding: 0.5rem;
-        font-size: 1.125rem;
+        font-size: 1.25rem;
         will-change: transform;
         transition: 0.25s transform ease-in-out;
 
@@ -45,10 +45,10 @@
             transform: scale(1.125);
         }
         @media only screen and (min-width: 425px) {
-            font-size: 1.25rem;
+            font-size: 1.375rem;
         }
         @media only screen and (min-width: 768px) {
-            font-size: 1.375rem;
+            font-size: 1.5rem;
         }    
         
     }
@@ -59,9 +59,8 @@
         width: 100%;
         min-height: 56px;
         text-align: center;
-        background-color: #1D6DD5;
-        color:white;
-        box-shadow: 3px 2px 1px rgba(0,0,0,0.3);
+        background-color: #3F51B5;
+        color:white;       
     }     
 }
 .header__nav {
