--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,9 +3,9 @@
   <a class="header__link" href="/">
 
     {% if page.url == "/pages/twitter/" %} 
-      {{ site.title }} 
+      @Giovanni0918
     {% else %} 
-      Giovanni Orlando ⚡
+      Giovanni Orlando
     {% endif %}
     
   </a>
