--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="theme-color" content="#3F51B5">
+  <meta name="theme-color" content="#3f51b5">
   <title>{{ site.title | escape }}</title>
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
   <meta property="og:locale" content="en_US">
@@ -39,17 +39,13 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="apple-mobile-web-app-title" content="{{ site.title | escape }}">
-  <link rel="apple-touch-icon" href="{{ site.url }}/dist/images/icons/icon-152x152.png">
-
-  <!-- Tile icon for Win8 (144x144 + tile color) -->
-  <meta name="msapplication-TileImage" content="{{ site.url }}/dist/images/icons/icon-144x144.png">
-  <meta name="msapplication-TileColor" content="#3F51B5">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ site.url }}/apple-touch-icon.png">
 
   <!-- Favicon and Web App Manifest -->
-  <link rel="icon" href="{{ site.url }}/dist/images/favicon.ico">
+  <link rel="icon" type="image/png" href="{{ site.url }}/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="{{ site.url }}/favicon-16x16.png" sizes="16x16">
   <link rel="manifest" href="{{ site.url }}/manifest.json">
-
-
+  <link rel="mask-icon" href="{{ site.url }}/safari-pinned-tab.svg" color="#3f51b5">
 
   <script async src="{{ site.url }}/dist/scripts/app.js"></script>
   <script defer src="{{ site.url }}/dist/scripts/blog.js"></script>
