--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,16 +17,16 @@
   <meta name="twitter:site" content="@giovanni0918">
   <meta name="twitter:title" content="{{ page.title }}">
   <meta name="twitter:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-  <meta name="twitter:image" content="{{ site.url }}/dist/images/avatar__img.jpg">  
-  
+  <meta name="twitter:image" content="{{ site.url }}/dist/images/avatar__img.jpg">
+
   <!-- BingSiteAuth.xml -->
   <meta name="msvalidate.01" content="0C5479F87DF7C3A5C228C24A3D5ACFF8" />
-  <link rel="stylesheet" href="{{ site.url }}/dist/styles/styles.css">
+
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
-  
-  
-  
+
+
+
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
 
@@ -47,8 +47,7 @@
   <link rel="manifest" href="{{ site.url }}/manifest.json">
   <link rel="mask-icon" href="{{ site.url }}/safari-pinned-tab.svg" color="#3f51b5">
 
-  <script async src="{{ site.url }}/dist/scripts/app.js"></script>
-  <script defer src="{{ site.url }}/dist/scripts/blog.js"></script>
+  <script src="{{ site.url }}/dist/style.bundle.js"></script>
   <!-- Enforce ssl -->
   <script>
     const host='giovanni-orlando.com';if((host===window.location.host||`www.${host}`===window.location.host)&&(window.location.protocol!=='https:')){window.location.protocol='https:'}
