--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -24,4 +24,4 @@ $on-palm:          600px;
 $on-laptop:        800px;
 
 // Import partials from the `minima` theme.
-@import "minima", "header", "content", "footer", "blog", "repos";
+@import "minima";
