--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,6 +47,9 @@
   <link rel="manifest" href="{{ site.url }}/manifest.json">
   <link rel="mask-icon" href="{{ site.url }}/safari-pinned-tab.svg" color="#3f51b5">
 
+  <link rel="preload" href="{{ site.url }}/dist/style.bundle.js" as="script">
+  <link rel="preload" href="{{ site.url }}/dist/app.bundle.js" as="script">
+
   <script src="{{ site.url }}/dist/style.bundle.js"></script>
   <!-- Enforce ssl -->
   <script>
