--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,10 @@
   <div class="container">
     <form action="" class="contact-form" id="contact-form" autocomplete="off">Contact me
       <label>Name
-        <input class="contact-form__control" name="name" type="text" placeholder="name" required>
+        <input class="contact-form__control" name="name" type="text" placeholder="name" autocomplete="name" required>
       </label>
       <label>Email
-        <input class="contact-form__control" name="email" type="email" placeholder="email" required>
+        <input class="contact-form__control" name="email" type="email" placeholder="email" autocomplete="email" required>
       </label>
       <label>Subject
         <input class="contact-form__control" name="subject" type="text" placeholder="subject" required>
