--- a/_includes/head.html
+++ b/_includes/head.html
@@ -47,10 +47,10 @@
   <link rel="manifest" href="{{ site.url }}/manifest.json">
   <link rel="mask-icon" href="{{ site.url }}/safari-pinned-tab.svg" color="#3f51b5">
 
-  <link rel="preload" href="{{ site.url }}/dist/style.bundle.js" as="script">
+  <link rel="preload" href="{{ site.url }}/dist/style.bundle.css" as="style">
   <link rel="preload" href="{{ site.url }}/dist/app.bundle.js" as="script">
 
-  <script src="{{ site.url }}/dist/style.bundle.js"></script>
+  <link rel="stylesheet" href="{{ site.url }}/dist/style.bundle.css"/>
   <!-- Enforce ssl -->
   <script>
     const host='giovanni-orlando.com';if((host===window.location.host||`www.${host}`===window.location.host)&&(window.location.protocol!=='https:')){window.location.protocol='https:'}
